# devstash

./: .dockerignore  .env.example  .gitignore  .oxlintrc.json  .pgfence.json  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  Taskfile.yml  eslint.config.mjs  lefthook.yml  next.config.ts  openapi.json  package-lock.json  package.json  prisma.config.ts  skills-lock.json  tsconfig.json  vercel.json  vitest.config.ts
.agents/agents/: auth-auditor.md  refactor-scanner.md  ui-reviewer.md
.agents/rules/: ai-interaction.md  api-contract.md  boundary.md  coding-standards.md  database.md  go-coding-standards.md  go-iteration.md  infra-python.md  infra-shell.md  infra.md  legacy-api-contract.md  legacy-coding-standards.md  legacy-database.md  legacy-nextjs-architecture.md  legacy-ops.md  legacy-security.md  legacy-server-client-boundary.md  legacy-state-management.md  nextjs-architecture.md  project.md  react.md  security-principles.md  security.md  tailwind.md  (+3 more)
.claude/: settings.json
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml
.junie/: guidelines.md
backend/: .air.toml  .dockerignore  .gitignore  .golangci.yml  .ko.yaml  .taplo.toml  .testcoverage.yml  Dockerfile  README.md  Taskfile.yml  go.mod  go.sum  sqlc.yaml
context/: ai-interaction.md  cleanup-audit.md  coding-standards.md  current-feature.md  history.md  migration-log.md  project-overview.md
docs/: CACHING_EXPLANATION.md  ai-integration-plan.md  item-crud-architecture.md  item-types.md  mcp-setup.md  stripe-integration-plan.md
infra/: README.md  versions.env
infra/cli/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
infra/cli/scripts/: check_floor_drift.py
infra/cli/src/devstash_infra/: __init__.py  app_gcp.py  app_local.py  cli.py  common.py  config.py  environment.py  job_gate.py  obs.py  paths.py  runtime.py  state_lock.py  versions.py
infra/cli/src/devstash_infra/ci/: __init__.py  actions.py  app.py  apply_infra.py  build_push.py  check_env_active.py  check_migrations.py  decide_build.py  env.py  images.py  inject_settings.py  operators.py  prune_registry.py  render_manifests.py  rollout_web.py  run_migrations.py  sign_images.py  ssa_apply.py  steps.py  validate_inputs.py  verify_control_plane.py  wait_endpoint.py  wait_rollout.py  wait_secrets_sync.py  wif_torn_down_skip.py
infra/cli/src/devstash_infra/clients/: __init__.py  ar.py  docker.py  gcloud.py  gh.py  health.py  helm.py  kind.py  kubectl.py  openssl.py  spaceship.py  tofu.py  tofu_local.py  yq.py
infra/cli/src/devstash_infra/clients/gcloud/: __init__.py  _artifacts.py  _auth.py  _billing.py  _builds.py  _certmanager.py  _compute.py  _config.py  _container.py  _iam.py  _memorystore.py  _projects.py  _quotas.py  _secrets.py  _services.py  _sql.py  _storage.py
infra/cli/src/devstash_infra/cloudbuild/: __init__.py  __main__.py  cleanup_builds.py  cleanup_negs.py  deploy_check.py  dump_step.py  env.py  guard.py  idle_count.py  prepare.py  secrets_tfvars.py  steps.py  suspend_step.py
infra/cli/src/devstash_infra/gcp/: __init__.py  app.py  apply_gate.py  bootstrap.py  config.py  context.py  db.py  deploy.py  dns.py  environment.py  gke.py  lifecycle.py  parallel.py  reconcile.py  secrets.py  state_recovery.py  suspend.py  teardown.py  tfvars.py
infra/cli/src/devstash_infra/local/: __init__.py  app.py  stack.py
infra/cli/src/devstash_infra/models/: __init__.py  api.py  helm.py  secrets_blob.py  tofu.py
infra/cli/src/devstash_infra/shared/: __init__.py  clock.py  dump.py  errors.py  lock_contention.py  log.py  proc.py  reap_negs.py  reconcile_ar_iam.py  secrets.py  third_party.py
infra/cli/tests/: conftest.py  doubles.py  test_app_gcp.py  test_app_local.py  test_common.py  test_environment.py  test_job_gate.py  test_obs.py  test_paths.py  test_runtime.py  test_scaffold.py  test_state_lock.py  test_versions.py
infra/cli/tests/ci/: test_actions.py  test_app.py  test_apply_infra.py  test_build_push.py  test_check_env_active.py  test_check_migrations.py  test_decide_build.py  test_env.py  test_inject_settings.py  test_operators.py  test_prune_registry.py  test_render_manifests.py  test_rollout_web.py  test_run_migrations.py  test_sign_images.py  test_steps.py  test_validate_inputs.py  test_verify_control_plane.py  test_wait_endpoint.py  test_wait_rollout.py  test_wait_secrets_sync.py  test_wif_torn_down_skip.py
infra/cli/tests/clients/: test_ar.py  test_docker.py  test_gcloud.py  test_gh.py  test_health.py  test_helm.py  test_kind.py  test_kubectl.py  test_openssl.py  test_spaceship.py  test_tofu.py  test_tofu_local.py  test_yq.py
infra/cli/tests/cloudbuild/: conftest.py  test_cleanup_builds.py  test_cleanup_negs.py  test_deploy_check.py  test_dump_step.py  test_env.py  test_guard.py  test_idle_count.py  test_main.py  test_prepare.py  test_secrets_tfvars.py  test_steps.py  test_suspend_step.py
infra/cli/tests/fixtures/: lock-orphaned.json
infra/cli/tests/gcp/: test_app.py  test_apply_gate.py  test_bootstrap.py  test_context.py  test_db.py  test_deploy.py  test_dns.py  test_environment.py  test_gke.py  test_lifecycle.py  test_parallel.py  test_reconcile.py  test_secrets.py  test_state_recovery.py  test_suspend.py  test_teardown.py  test_tfvars.py
infra/cli/tests/local/: test_app.py  test_stack.py
infra/cli/tests/models/: test_tofu.py
infra/cli/tests/shared/: test_dump.py  test_errors.py  test_lock_contention.py  test_log.py  test_proc.py  test_reap_negs.py  test_reconcile_ar_iam.py  test_secrets.py  test_third_party.py
prisma/: schema.prisma  seed.ts
public/: sw.js
scripts/: audit-dashboard-skeletons.js  backfill-image-thumbnails.ts  fetch-theme.js  generate-openapi.ts  generate-themes.js  purge-demo-items.ts  purge-users.ts  test-db.ts  validate-stripe-webhooks.ts  vercel-ignore.sh
src/: auth.config.ts  auth.ts  middleware.ts  proxy.ts
web/: .firebaserc  .gitignore  .oxfmtrc.json  .oxlintrc.json  firebase.json  firebase.template.json  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tsconfig.json  tsconfig.scripts.json  vite.config.ts
(+1590 files in other folders)
